--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ExecutableDllPlugin",
   "version": "0.1.0",
   "description": "Execute DllPlugin bundle code",
-  "main": "index.js",
+  "main": "lib/index.js",
   "author": "Sergei Startsev",
   "license": "MIT"
 }
