--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "devDependencies": {
     "eslint": "^5.9.0",
-    "prettier": "^1.15.3"
+    "prettier": "^1.15.3",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2"
   }
 }
